# OOP_indie_studio_2018

./: CMakeLists.txt  Dockerfile  Makefile  README.md  README.txt  compose.yml  docker-compose.yml  main.cpp
Irrlicht/: FindIrrlicht.cmake
Models/: podium.3ds
Models/Luigi/: luigi_idle.b3d  luigi_running.b3d  luigi_win.b3d
Models/Mario/: idle.b3d  mario.b3d  mario.blend  mario.blend1  mario_idle_manuel.b3d  mario_model.dae  mario_model.fbx  mario_run.b3d  mario_win.b3d  walk.b3d
Models/Wario/: wario_idle.b3d  wario_run.b3d  wario_win.b3d
Models/Yoshi/: yoshi_idle_ok.b3d  yoshi_run.b3d  yoshi_win.b3d
ressources/Planet/: Home Planet Door.3ds  Home Planet Flowers.3ds  Home Planet Steps.3ds  Home Planet.3ds  planet.3ds
src/AI/: AAi.cpp  AAi.hpp
src/APlayers/: APlayers.cpp  APlayers.hpp
src/Blocks/: ABlock.cpp  ABlock.hpp
src/Bomb/: Bomb.cpp  Bomb.hpp
src/Characters/Luigi/: Luigi.cpp  Luigi.hpp
src/Characters/Mario/: Mario.cpp  Mario.hpp
src/Characters/Wario/: Wario.cpp  Wario.hpp
src/Characters/Yoshi/: Yoshi.cpp  Yoshi.hpp
src/Exception/: Error.cpp  Error.hpp
src/GUI/: Credits.cpp  Credits.hpp  EventReceiver.cpp  EventReceiver.hpp  InGameMenu.cpp  InGameMenu.hpp  LoadGame.cpp  LoadGame.hpp  MainMenu.cpp  MainMenu.hpp  MenuButton.cpp  MenuButton.hpp  SelectingEvent.cpp  SelectingEvent.hpp  Settings.cpp  Settings.hpp
src/Game/: Game.cpp  Game.hpp
src/Integration/: Integration.hpp
src/Map/: Map.cpp  Map.hpp
src/PowerUp/: APowerUp.cpp  APowerUp.hpp  Power.cpp  Power.hpp  Speed.cpp  Speed.hpp  Stock.cpp  Stock.hpp
src/Properties/: Properties.cpp  Properties.hpp
src/Window/: Window.cpp  Window.hpp
src/splashscreen/: Splash.cpp  Splash.hpp
